welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:8: error: type mismatch;
 found   : Unit
 required: Boolean
	if (y!=0) {
        ^